fix(sheet-cell): filter bug